<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/home"
        android:background="@drawable/gradient_bg_home"
        android:padding="24dp"
        android:contentDescription="@string/splash_logo_description" />

    <FrameLayout
        android:id="@+id/titleContainer"
        android:layout_below="@id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housing_hub"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/shineView"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#80FFFFFF" />
    </FrameLayout>

    <TextView
        android:id="@+id/appTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_your_perfect_stay_effortlessly"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@id/titleContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />
</RelativeLayout>
